--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,9 +1,9 @@
-name: construccion DOCKER
+name: Build and Push Docker Image to Docker Hub
 
 on:
   push:
     branches:
-      - main  
+      - main  # Cambia esto a la rama que desees usar
 
 jobs:
   build-and-push:
@@ -13,17 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/la-banda-del-tirador/test:latest -f dev.Dockerfile .
+          docker build -t <DOCKER_USERNAME>/<NOMBRE_IMAGEN>:latest -f dev.Dockerfile .
 
-      - name: Push Docker image
+      - name: Push Docker image to Docker Hub
         run: |
-          docker push ghcr.io/la-banda-del-tirador/test:latest
+          docker push <DOCKER_USERNAME>/<NOMBRE_IMAGEN>:latest
